# AeroTrack

./: .gitignore  AeroTrack.slnx  CMakeLists.txt  Readme.md
AeroTrackClient/: AeroTrackClient.vcxproj  AeroTrackClient.vcxproj.filters  Client.cpp  Client.h  ClientUI.cpp  ClientUI.h  FileReceiver.cpp  FileReceiver.h  HandoffHandler.cpp  HandoffHandler.h  PositionReporter.cpp  PositionReporter.h  main.cpp
AeroTrackServer/: AeroTrackServer.vcxproj  AeroTrackServer.vcxproj.filters  Filetransfer.cpp  Filetransfer.h  Flightregistry.cpp  Flightregistry.h  Handoffmanager.cpp  Handoffmanager.h  Main.cpp  Server.cpp  Server.h  Serverui.cpp  Serverui.h  Statemachine.cpp  Statemachine.h
AeroTrackShared/: AeroTrackShared.vcxproj  AeroTrackShared.vcxproj.filters  Config.h  Logger.cpp  Logger.h  Packet.cpp  Packet.h  PacketTypes.cpp  PacketTypes.h  RUDP.cpp  RUDP.h
AeroTrackTests/: AeroTrackTests.vcxproj  AeroTrackTests.vcxproj.filters  ClientTests.cpp  Filetransfertests.cpp  IntegrationTests.cpp  LoggerTests.cpp  RUDPTests.cpp  Servertests.cpp  Statemachinetests.cpp  SystemTests.cpp  TestHelpers.h  Testcommon.h
